# svango

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: svango.yml  svango_prod.yml
actors/: admin.py  apps.py  managers.py  models.py  urls.py
actors/management/commands/: populate_db.py
actors/management/tests/: test_populate_db.py
actors/migrations/: 0001_initial.py  0002_grouppermission_permissiongroup_usergroup_and_more.py
actors/tests/: factories.py  test_checks.py  test_managers.py  test_models.py  test_utils.py
actors/views/: groups.py  users.py
actors/views/serializers/: groups.py  users.py
actors/views/tests/: test_groups.py  test_user_group.py  test_users.py  test_users_login.py
common/utils/: fields.py  permissions.py
docker/: Dockerfile  docker-compose.yml  env
docker/entrypoints/: run_asgi.sh  run_celery.sh  run_celery_beat.sh  run_svango.sh
locale/en/LC_MESSAGES/: django.po
svango/: asgi.py  celery.py  celery_backend.py  urls.py  wsgi.py
svango/config/: dynaconf_hooks.py  settings.py  settings.yaml
svango/tests/: test_celery.py  test_celery_backend.py
svango/utils/: fields.py  mixins.py
svango/views/: version.py
svango/views/tests/: test_version.py
